[gd_scene load_steps=14 format=3 uid="uid://0gs5qe7lvv4j"]

[ext_resource type="Script" path="res://Levels/EndlessRunner/StateManager.gd" id="1_0vqnj"]
[ext_resource type="Texture2D" uid="uid://bjguvjrvlt60b" path="res://Assets/Environment/EvilTree.png" id="2_flukt"]
[ext_resource type="Texture2D" uid="uid://rnepadpt3m54" path="res://Assets/Tileset/Tileset.png" id="3_64vg2"]
[ext_resource type="PackedScene" uid="uid://b11hooauu7282" path="res://Nodes/Player/Player.tscn" id="4_klnbb"]
[ext_resource type="Script" path="res://Levels/EndlessRunner/EndlessRunnerPlayer.gd" id="5_x4nk5"]
[ext_resource type="PackedScene" uid="uid://bwa3y06aah4qt" path="res://Nodes/Enemys/Yam.tscn" id="7_6d3rd"]
[ext_resource type="Script" path="res://Scripts/Enemys/Yam.gd" id="7_dyrgm"]
[ext_resource type="PackedScene" uid="uid://cx16cjaq6n43b" path="res://Levels/EndlessRunner/EvilCloud.tscn" id="8_5fjyp"]
[ext_resource type="Texture2D" uid="uid://b5vbhsfmc6h7b" path="res://Assets/Mechanics/Father.png" id="9_dieqc"]
[ext_resource type="Texture2D" uid="uid://dshf4t57oydcb" path="res://Assets/Mechanics/Hand.png" id="10_4d05j"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_el2so"]
texture = ExtResource("3_64vg2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
4:6/0 = 0
3:6/0 = 0
2:6/0 = 0

[sub_resource type="TileSet" id="TileSet_g83ji"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_el2so")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3vtqi"]
size = Vector2(24.0025, 1156)

[node name="EndlessRunner" type="Node2D"]
script = ExtResource("1_0vqnj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.329412, 0.360784, 0.494118, 1)

[node name="Background" type="CanvasGroup" parent="."]
self_modulate = Color(1, 1, 1, 0.396078)

[node name="EvilTree" type="Sprite2D" parent="Background"]
position = Vector2(233, 343)
texture = ExtResource("2_flukt")

[node name="EvilTree6" type="Sprite2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.607843)
position = Vector2(808, 566)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_flukt")

[node name="EvilTree2" type="Sprite2D" parent="Background"]
position = Vector2(934, 451)
texture = ExtResource("2_flukt")

[node name="EvilTree3" type="Sprite2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.882353)
position = Vector2(466, 548)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_flukt")

[node name="EvilTree4" type="Sprite2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.882353)
position = Vector2(673, 492)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_flukt")

[node name="EvilTree5" type="Sprite2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.607843)
position = Vector2(353, 463)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_flukt")

[node name="EvilTree7" type="Sprite2D" parent="Background"]
position = Vector2(107, 479)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_flukt")

[node name="EvilTree8" type="Sprite2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.882353)
position = Vector2(563, 399)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_flukt")

[node name="EvilTree9" type="Sprite2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.882353)
position = Vector2(1186, 475)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_flukt")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 96)
tile_set = SubResource("TileSet_g83ji")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(917504, 393216, 0, 983040, 196608, 1, 1048576, 196608, 0, 1114112, 196608, 1, 917505, 393216, 0, 983041, 196608, 1, 1048577, 196608, 0, 1114113, 196608, 1, 917506, 393216, 0, 983042, 196608, 1, 1048578, 196608, 0, 1114114, 196608, 1, 917507, 393216, 0, 983043, 196608, 1, 1048579, 196608, 0, 1114115, 196608, 1, 917508, 393216, 0, 983044, 196608, 1, 1048580, 196608, 0, 1114116, 196608, 1, 917509, 393216, 0, 983045, 196608, 1, 1048581, 196608, 0, 1114117, 196608, 1, 917510, 393216, 0, 983046, 196608, 1, 1048582, 196608, 0, 1114118, 196608, 1, 917511, 393216, 0, 983047, 196608, 1, 1048583, 196608, 0, 1114119, 196608, 1, 917512, 393216, 0, 983048, 196608, 1, 1048584, 196608, 0, 1114120, 196608, 1, 917513, 393216, 0, 983049, 196608, 1, 1048585, 196608, 0, 1114121, 196608, 1, 917514, 393216, 0, 983050, 196608, 1, 1048586, 196608, 0, 1114122, 196608, 1, 917515, 393216, 0, 983051, 196608, 1, 1048587, 196608, 0, 1114123, 196608, 1, 917516, 393216, 0, 983052, 196608, 1, 1048588, 196608, 0, 1114124, 196608, 1, 917517, 393216, 0, 983053, 196608, 1, 1048589, 196608, 0, 1114125, 196608, 1, 917518, 393216, 0, 983054, 196608, 1, 1048590, 196608, 0, 1114126, 196608, 1, 917519, 393216, 0, 983055, 196608, 1, 1048591, 196608, 0, 1114127, 196608, 1, 917520, 393216, 0, 983056, 196608, 1, 1048592, 196608, 0, 1114128, 196608, 1, 917521, 393216, 0, 983057, 196608, 1, 1048593, 196608, 0, 1114129, 196608, 1, 917522, 393216, 0, 983058, 196608, 1, 1048594, 196608, 0, 1114130, 196608, 1, 917523, 393216, 0, 983059, 196608, 1, 1048595, 196608, 0, 1114131, 196608, 1, 917524, 393216, 0, 983060, 196608, 1, 1048596, 196608, 0, 1114132, 196608, 1, 917525, 393216, 0, 983061, 196608, 1, 1048597, 196608, 0, 1114133, 196608, 1, 917526, 393216, 0, 983062, 196608, 1, 1048598, 196608, 0, 1114134, 196608, 1, 917527, 393216, 0, 983063, 196608, 1, 1048599, 196608, 0, 1114135, 196608, 1, 917528, 393216, 0, 983064, 196608, 1, 1048600, 196608, 0, 1114136, 196608, 1, 917529, 393216, 0, 983065, 196608, 1, 1048601, 196608, 0, 1114137, 196608, 1, 917530, 393216, 0, 983066, 196608, 1, 1048602, 196608, 0, 1114138, 196608, 1, 917531, 393216, 0, 983067, 196608, 1, 1048603, 196608, 0, 1114139, 196608, 1, 917532, 393216, 0, 983068, 196608, 1, 1048604, 196608, 0, 1114140, 196608, 1, 917533, 393216, 0, 983069, 196608, 1, 1048605, 196608, 0, 1114141, 196608, 1, 917534, 393216, 0, 983070, 196608, 1, 1048606, 196608, 0, 1114142, 196608, 1, 917535, 393216, 0, 983071, 196608, 1, 1048607, 196608, 0, 1114143, 196608, 1, 917536, 393216, 0, 983072, 196608, 1, 1048608, 196608, 0, 1114144, 196608, 1, 917537, 393216, 0, 983073, 196608, 1, 1048609, 196608, 0, 1114145, 196608, 1, 917538, 393216, 0, 983074, 196608, 1, 1048610, 196608, 0, 1114146, 196608, 1, 917539, 393216, 0, 983075, 196608, 1, 1048611, 196608, 0, 1114147, 196608, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(1, 0)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(5, 412)
shape = SubResource("RectangleShape2D_3vtqi")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1095, 299)
shape = SubResource("RectangleShape2D_3vtqi")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(565, 11)
rotation = 1.57079
shape = SubResource("RectangleShape2D_3vtqi")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(577, 556)
rotation = 1.57079
shape = SubResource("RectangleShape2D_3vtqi")

[node name="Player" parent="." groups=["player_group"] instance=ExtResource("4_klnbb")]
position = Vector2(518, 509)
collision_mask = 31
script = ExtResource("5_x4nk5")

[node name="Yam" parent="." instance=ExtResource("7_6d3rd")]
position = Vector2(155, 519)
script = ExtResource("7_dyrgm")

[node name="TileTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="POS CHECK" type="Node2D" parent="."]
position = Vector2(1349, 526)

[node name="EvilCloud" parent="." groups=["Clouds"] instance=ExtResource("8_5fjyp")]
position = Vector2(304, 95)

[node name="EvilCloud2" parent="." groups=["Clouds"] instance=ExtResource("8_5fjyp")]
position = Vector2(541, 150)
scale = Vector2(1.2, 1.2)

[node name="EvilCloud3" parent="." groups=["Clouds"] instance=ExtResource("8_5fjyp")]
position = Vector2(839, 83)
scale = Vector2(0.72, 0.72)

[node name="EvilCloud4" parent="." groups=["Clouds"] instance=ExtResource("8_5fjyp")]
position = Vector2(1287, 176)
scale = Vector2(1.44, 1.44)

[node name="EvilCloud5" parent="." groups=["Clouds"] instance=ExtResource("8_5fjyp")]
position = Vector2(96.0004, 190)
scale = Vector2(0.96, 0.96)

[node name="Father" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.431373)
position = Vector2(1135, 81)
rotation = -0.661841
scale = Vector2(1.6, 1.6)
texture = ExtResource("9_dieqc")

[node name="Hand" type="Sprite2D" parent="Father"]
position = Vector2(-40, 40)
texture = ExtResource("10_4d05j")

[node name="Hand2" type="Sprite2D" parent="Father"]
position = Vector2(40, 40)
texture = ExtResource("10_4d05j")
flip_h = true

[node name="CoinTimer" type="Timer" parent="."]

[connection signal="timeout" from="TileTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
